<resources>
    <string name="app_name">Fitness_Prototyp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_log_in">Log In</string>
    <string name="start_register">Register</string>
    <string name="Appname">FitnessComm</string>
    <string name="logIn_eMail_hint">E-Mail</string>
    <string name="logIn_password_hint">Password</string>
    <string name="register_name_hint">Name</string>
    <string name="register_teamcode_hint">Teamcode</string>
    <string name="logIn_cancel">Cancel</string>
    <string name="drawer_dashboard_string">Dashboard</string>
    <string name="drawer_newUnit_string">Neue Einheit</string>
    <string name="drawer_comments_string">Kommentare</string>
    <string name="drawer_exercises_string">Übungen</string>
    <string name="drawer_settings_string">Einstellungen</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="dashboard_lastUnit">Letzte Einheit</string>
    <string name="dashboard_units">Einheiten</string>
    <string name="dashboard_comments">Kommentare</string>
    <string name="dashboard_plans">Pläne</string>
    <string name="dashboard_exercises">Übungen</string>
</resources>
