<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentColors"
    tools:context=".logIn_startFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/start_login_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="106dp"
            android:layout_marginLeft="106dp"
            android:layout_marginTop="296dp"
            android:layout_marginEnd="106dp"
            android:layout_marginRight="106dp"
            android:background="@drawable/rounded_button"
            android:text="@string/start_log_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/start_register_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="106dp"
            android:layout_marginLeft="106dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="106dp"
            android:layout_marginRight="106dp"
            android:background="@drawable/rounded_button"
            android:text="@string/start_register"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_login_button" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="154dp"
            android:layout_marginEnd="101dp"
            android:layout_marginRight="101dp"
            android:text="@string/Appname"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000000"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>